package edu.fiuba.algo3.modelo.Construccion;

import edu.fiuba.algo3.modelo.Construccion.Construccion;

public interface Refineria extends Construccion {

    void recolectar();
}
